@@ -103,17 +103,25 @@ AC_TYPE_SIZE_T
 
 AC_FUNC_MMAP
 
-dnl set the libtool shared library version numbers
-lt_major=20
+dnl ---------------------------------------------------------------------------
+dnl When making a release:
+dnl  1. If the library source code has changed at all since the last release,
+dnl     then increment REVISION.
+dnl  2. If the interface (ABI) has been modified since the last release,
+dnl     increment CURRENT, and set REVISION to 0.
+dnl  3. If the interface changes consist solely of additions, increment AGE.
+dnl  4. If the interface has removed or changed elements, set AGE to 0.
+dnl ---------------------------------------------------------------------------
+lt_current=20
 lt_revision=0
 lt_age=0
 
-pkgincludedir='$(includedir)/dc1394'
-AC_SUBST(pkgincludedir)
-
-AC_SUBST(lt_major)
+AC_SUBST(lt_current)
 AC_SUBST(lt_revision)
 AC_SUBST(lt_age)
+
+pkgincludedir='$(includedir)/dc1394'
+AC_SUBST(pkgincludedir)
 
 dnl AX_CFLAGS_WARN_ALL(CFLAGS)
 CFLAGS="$CFLAGS -Wall -Wunused -std=gnu99"
