@@ -1,4 +1,6 @@
 2007-12-12 David Moore <dcm@acm.org>
+	* SVN 509: Removed LIBDC1394_VERSION* from control.h and updated
+		   libtool version info in configure.in.
 	* SVN 508: Fix isochronous declarations.
 	* SVN 507: Remove internal.h include from vendor include files
 
